# cpp-project-template

./: .clang-format  .clang-tidy  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  docker-compose.base.yml  docker-compose.yml
.devcontainer/: devcontainer.json
.github/workflows/: build-and-push-base-image.yml  test.yml
benchmark/: CMakeLists.txt  util.h  vadd_bench.cc
cmake/: Installing.cmake  Packaging.cmake
cmake/module/: GoogleBenchmark.cmake  GoogleTest.cmake
cmake/template/: Config.cmake.in
docker/: Dockerfile
docker/install/: install_doxygen.sh  install_llvm.sh  install_ubuntu_pkg.sh
docs/: CMakeLists.txt
include/cpp-template/: vadd.h
scripts/lint/: check_all.sh  check_clang_format.sh  check_clang_tidy.sh  check_cmake_format.sh
src/: CMakeLists.txt  error.cc  error.h  logging.h  vadd.cc
test/: CMakeLists.txt  vadd_test.cc
